--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
     </nav>
   </header>
   <main class="profile profile-contact">
-    <h1>Contact</h1>
+    <h1>Contact Diego Boy</h1>
     <div>
       Diego Boy <br>
       Beermannstr. 8 <br>
