update about page title and move the skills table up the page

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" type="image/png" href="./img/favicon-32x32.png" sizes="32x32" />
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/style.production.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
   <header class="page-header">
@@ -32,13 +32,13 @@
     </nav>
   </header>
   <main class="profile profile-about">
-    <h1>About</h1>
+    <h1>About Diego Boy</h1>
     <div>
       <p>A little bit about myself and my interests:</p>
       <ul role="list">
-        <li role="listitem">Full-Stack Development</li>
-        <li role="listitem">Surfing</li>
-        <li role="listitem">Climbing</li>
+        <li role="listitem"><a href="#web-development">Full-Stack Development</a></li>
+        <li role="listitem"><a href="#surfing">Surfing</a></li>
+        <li role="listitem"><a href="#climbing">Climbing</a></li>
       </ul>
 
       <a href="files/cv.pdf" class="button" download>Download my CV</a>
@@ -643,50 +643,55 @@
         </g>
       </svg>
       
-      <h2>How I became a Web Developer</h2>
+      <h2 id="web-development">How I became a Web Developer</h2>
       <p>
         In many of my earlier jobs, before I became a programmer, there were always so many unnecessary steps that could and should have been automated that never got on the priority list and therefore never got automated at all, leaving us to copy the same information from one system to another and back again at a later time. <br>
         I was always frustrated of the many unecessary steps we hade to take that I started tracking and calculating the wasted total time and it came together to hours by the end of the week. Multiply that by each member a team might have and the calculated time grows drastically. <br>
         The desire to be able to support my collegues, friends and family and to not be dependant on others to improve my workflow is what initially got me into learning to code.
       </p>
+      <table>
+        <thead>
+          <tr>
+            <th>Skills</th>
+            <th>Years of Experience</th>
+            <th>Level of Experience</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>HTML</td>
+            <td>1</td>
+            <td>Advance</td>
+          </tr>
+          <tr>
+            <td>CSS</td>
+            <td>1</td>
+            <td>Intermediate</td>
+          </tr>
+          <tr>
+            <td>JavaScript</td>
+            <td>1</td>
+            <td>Beginner</td>
+          </tr>
+          <tr>
+            <td>Ruby on Rails</td>
+            <td>1</td>
+            <td>Beginner</td>
+          </tr>
+        </tbody>
+      </table>
   
-      <h2>What surfing means to me</h2>
+      <h2 id="surfing">What surfing means to me</h2>
       <p>
         As many probably can relate, it's not always easy to switch your mind from work to leisure mode. There was a time I couldn't help myself but check my work emails even during vacation. <br>
         Once I booked a last minute trip to a surf camp and that was going to be the first time in a long time, where I could switch off and relax. The combination of physical exaustion of battling the waves as you paddle out and the concentration of selevting the right wave and be on the right spot allowed me to experience a combination of complete relaxation and concentration at the same time. It was such a magical moment that hooked me to the sport.
       </p>
   
-      <h2>How I got into climbing</h2>
+      <h2 id="climbing">How I got into climbing</h2>
       <p>
         Climbing for me is a great way of training and socializing. With a group of friends we regularly meet up for a session and whenever possible, plan little escape trips during the weekends. It was through some of these friends, with who I used to work together with in a previous compnay, that invited me to join them after work. It's great to finish the day off and get some fun training in. Especially after you've been sitting at a desk for hours.
       </p>
     </div>
-    <table>
-      <thead>
-        <tr>
-          <th>Skills</th>
-          <th>Years of Experience</th>
-          <th>Level of Experience</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>HTML</td>
-          <td>3</td>
-          <td>Advance</td>
-        </tr>
-        <tr>
-          <td>CSS</td>
-          <td>2</td>
-          <td>Intermediate</td>
-        </tr>
-        <tr>
-          <td>JavaScript</td>
-          <td>1</td>
-          <td>Beginner</td>
-        </tr>
-      </tbody>
-    </table>
     <script src="js/tota11y.min.js"></script>
   </main>
   <footer class="page-footer">
