--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
   </header>
   <main class="profile profile-index">
     <img src="./img/diego_boy_portrait.jpg" alt="Diego Boy Portrait" class="profile__portrait">
-    <h1>Hello World!</h1>
+    <h1>Welcome! <br> Nice to meet you.</h1>
     <p>
-      My name is Diego Boy. I am a <span>web</span> developer from Germany.
+      My name is Diego Boy. I am a German-Colombian <span>web</span> developer based in Berlin, Germany.
     </p>
     <a href="#">Check out some of my code</a>
   </main>
