add links to footers social media icons

--- a/work.html
+++ b/work.html
@@ -72,8 +72,8 @@
   <footer class="page-footer">
     <p>Find me on</p>
     <div class="social-media">
-      <img src="./img/github_icon.svg" alt="The GitHub logo displaying the shadow of a cat's head">
-      <img src="./img/linkedin_icon.svg" alt="The LinkedIn logo consisting of the letters l and i">
+      <a href="https://github.com/boydiego" target="_blank"><img src="./img/github_icon.svg" alt="The GitHub logo displaying the shadow of a cat's head"></a>
+      <a href="https://www.linkedin.com/in/diegoboy/" target="_blank"><img src="./img/linkedin_icon.svg" alt="The LinkedIn logo consisting of the letters l and i"></a>
     </div>
   </footer>
   <script src="js/tota11y.min.js"></script>
