center the page main titles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" type="image/png" href="./img/favicon-32x32.png" sizes="32x32" />
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/style.production.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
   <header class="page-header">
@@ -33,7 +33,7 @@
   </header>
   <main class="profile profile-index">
     <img src="./img/diego_boy_portrait.jpg" alt="Diego Boy Portrait" class="profile__portrait">
-    <h1>Welcome! <br> Nice to meet you.</h1>
+    <h1 class="title-index">Welcome! <br> Nice to meet you.</h1>
     <p>
       My name is Diego Boy. I am a German-Colombian <span>web</span> developer based in Berlin, Germany.
     </p>
