--- a/about.html
+++ b/about.html
@@ -660,22 +660,22 @@
         <tbody>
           <tr>
             <td>HTML</td>
-            <td>1</td>
+            <td class="skill-years">1</td>
             <td>Advance</td>
           </tr>
           <tr>
             <td>CSS</td>
-            <td>1</td>
+            <td class="skill-years">1</td>
             <td>Intermediate</td>
           </tr>
           <tr>
             <td>JavaScript</td>
-            <td>1</td>
+            <td class="skill-years">1</td>
             <td>Beginner</td>
           </tr>
           <tr>
             <td>Ruby on Rails</td>
-            <td>1</td>
+            <td class="skill-years">1</td>
             <td>Beginner</td>
           </tr>
         </tbody>
