--- a/contact.html
+++ b/contact.html
@@ -46,13 +46,13 @@
   
     <form action="" method="post" id="contact-form">
       <label class="standard-label" for="contact-email">* E-mail:</label>
-      <input type="email" id="contact-email" required>
+      <input type="email" id="contact-email" required aria-required="true">
   
       <label class="standard-label" for="contact-telephone">Telephone</label>
       <input type="tel" id="contact-telephone">
   
       <label class="standard-label" for="contact-message">* Message:</label>
-      <textarea maxlength="240" placeholder="max 240 characters" id="contact-message" required></textarea>
+      <textarea maxlength="240" placeholder="max 240 characters" aria-label="message box for maximal 240 characters" id="contact-message" required aria-required="true"></textarea>
   
       <input type="submit" value="Send message">
     </form>
