--- a/contact.html
+++ b/contact.html
@@ -45,13 +45,13 @@
     <button href="mailto:diegolive5000@gmail.com" class="button__secondary">Contact me</button>
   
     <form action="" method="post" id="contact-form">
-      <label class="standard-label" for="contact-email">* E-mail:</label>
+      <label class="standard-label" for="contact-email"><span class="mandatory">*</span>E-mail:</label>
       <input type="email" id="contact-email" required aria-required="true">
   
       <label class="standard-label" for="contact-telephone">Telephone</label>
       <input type="tel" id="contact-telephone">
   
-      <label class="standard-label" for="contact-message">* Message:</label>
+      <label class="standard-label" for="contact-message"><span class="mandatory">*</span>Message:</label>
       <textarea maxlength="240" placeholder="max 240 characters" aria-label="message box for maximal 240 characters" id="contact-message" required aria-required="true"></textarea>
   
       <input type="submit" value="Send message">
