install HTML linters and correct errors

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,15 +35,15 @@
     <h1>About Diego Boy</h1>
     <div>
       <p>A little bit about myself and my interests:</p>
-      <ul role="list">
-        <li role="listitem"><a href="#web-development">Full-Stack Development</a></li>
-        <li role="listitem"><a href="#surfing">Surfing</a></li>
-        <li role="listitem"><a href="#climbing">Climbing</a></li>
+      <ul>
+        <li><a href="#web-development">Full-Stack Development</a></li>
+        <li><a href="#surfing">Surfing</a></li>
+        <li><a href="#climbing">Climbing</a></li>
       </ul>
 
       <a href="files/cv.pdf" class="button" download>Download my CV</a>
 
-      <svg id="about-picture" xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="auto" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <svg id="about-picture" xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="auto" viewbox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
         <defs>
             <polygon id="a" points=".06 231.917 .06 .929 688.717 .929 688.717 231.917"></polygon>
         </defs>
