--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -39,12 +39,12 @@
       12435 Berlin <br>
       Deutschland <br>
       <br>
-      <a href="tel:+49 1633056279">Tel +49 1633056279</a>
+      <a href="tel:+491633056279">Tel +49 1633056279</a>
       <a href="mailto:diegolive5000@gmail.com">diegolive5000@gmail.com</a>
     </div>
-    <button href="mailto:diegolive5000@gmail.com" class="button__secondary">Contact me</button>
+    <button onclick="location.href='mailto:diegolive5000@gmail.com'" class="button__secondary">Contact me</button>
   
-    <form action="" method="post" id="contact-form">
+    <form action="#" method="post" id="contact-form">
       <label class="standard-label" for="contact-email"><span class="mandatory">*</span>E-mail:</label>
       <input type="email" id="contact-email" required aria-required="true">
   
