--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <link rel="shortcut icon" type="image/png" href="./img/favicon-32x32.png" sizes="32x32" />
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/style.production.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
   <header class="page-header">
     <!-- Add your logo img here -->
-    <img src="./img/logo.png" alt="" class="page-header__item logo">
-    <img src="./img/logo_small.png" alt="" class="page-header__item small-logo">
+    <img src="./img/logo.svg" alt="" class="page-header__item logo">
+    <img src="./img/logo_small.svg" alt="" class="page-header__item small-logo">
     <nav class="main-navigation page-header__item">
       <ul role="menubar" class="navigation-list">
         <li role="presentation">
