--- a/work.html
+++ b/work.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" type="image/png" href="./img/favicon-32x32.png" sizes="32x32" />
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.production.css">
 </head>
 <body>
   <header class="page-header">
