fix download CV link in about page for firefox browsers to have text color white even after visited

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
         <li><a href="#climbing">Climbing</a></li>
       </ul>
 
-      <a href="files/cv.pdf" class="button" download>Download my CV</a>
+      <a href="files/cv.pdf" class="button button-downloadcv" download>Download my CV</a>
 
       <svg id="about-picture" xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="auto" viewbox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
         <defs>
