add an alert mesg on submission and redirect the user to the homepage

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
     </div>
     <button onclick="location.href='mailto:diegolive5000@gmail.com'" class="button__secondary">Contact me</button>
   
-    <form action="#" method="post" id="contact-form">
+    <form action="/index.html" method="get" onsubmit="alert('Thank you for getting in touch!');" id="contact-form">
       <label class="standard-label" for="contact-email"><span class="mandatory">*</span>E-mail:</label>
       <input type="email" id="contact-email" required aria-required="true">
   
