redirect user to my GitHub account when clicking the link "Check out some of my code" on the homepage

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <p>
       My name is Diego Boy. I am a German-Colombian <span>web</span> developer based in Berlin, Germany.
     </p>
-    <a href="#">Check out some of my code</a>
+    <a href="https://github.com/boydiego" target="_blank">Check out some of my code</a>
   </main>
   <footer class="page-footer">
     <p>Find me on</p>
