--- a/about.html
+++ b/about.html
@@ -7,14 +7,14 @@
   <link rel="shortcut icon" type="image/png" href="./img/favicon-32x32.png" sizes="32x32" />
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/762f382184.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="css/style.production.css">
 </head>
 <body>
   <header class="page-header">
-    <!-- Add your logo img here -->
     <img src="./img/logo.svg" alt="" class="page-header__item logo">
     <img src="./img/logo_small.svg" alt="" class="page-header__item small-logo">
-    <nav class="main-navigation page-header__item">
+    <nav class="main-navigation page-header__item" id="navigation">
       <ul role="menubar" class="navigation-list">
         <li role="presentation">
           <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
@@ -692,6 +692,9 @@
         Climbing for me is a great way of training and socializing. With a group of friends we regularly meet up for a session and whenever possible, plan little escape trips during the weekends. It was through some of these friends, with who I used to work together with in a previous compnay, that invited me to join them after work. It's great to finish the day off and get some fun training in. Especially after you've been sitting at a desk for hours.
       </p>
     </div>
+    <a href="#navigation" class="scroll-up">
+      <i class="fa-solid fa-circle-arrow-up"></i>
+    </a>
     <script src="js/tota11y.min.js"></script>
   </main>
   <footer class="page-footer">
