--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
   <link rel="shortcut icon" type="image/png" href="./img/favicon-32x32.png" sizes="32x32" />
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/762f382184.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="css/style.production.css">
 </head>
 <body>
@@ -14,7 +15,7 @@
     <!-- Add your logo img here -->
     <img src="./img/logo.svg" alt="" class="page-header__item logo">
     <img src="./img/logo_small.svg" alt="" class="page-header__item small-logo">
-    <nav class="main-navigation page-header__item">
+    <nav class="main-navigation page-header__item" id="navigation">
       <ul role="menubar" class="navigation-list">
         <li role="presentation">
           <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
@@ -56,6 +57,9 @@
   
       <input type="submit" value="Send message">
     </form>
+    <a href="#navigation" class="scroll-up">
+      <i class="fa-solid fa-circle-arrow-up"></i>
+    </a>
     <script src="js/tota11y.min.js"></script>
   </main>
   <footer class="page-footer">
