fix grammar errors

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
   <main class="profile profile-about">
     <h1>About Diego Boy</h1>
     <div>
-      <p>A little bit about myself and my interests:</p>
+      <p>A little about myself and my interests:</p>
       <ul>
         <li><a href="#web-development">Full-Stack Development</a></li>
         <li><a href="#surfing">Surfing</a></li>
@@ -646,8 +646,8 @@
       <h2 id="web-development">How I became a Web Developer</h2>
       <p>
         In many of my earlier jobs, before I became a programmer, there were always so many unnecessary steps that could and should have been automated that never got on the priority list and therefore never got automated at all, leaving us to copy the same information from one system to another and back again at a later time. <br>
-        I was always frustrated of the many unecessary steps we hade to take that I started tracking and calculating the wasted total time and it came together to hours by the end of the week. Multiply that by each member a team might have and the calculated time grows drastically. <br>
-        The desire to be able to support my collegues, friends and family and to not be dependant on others to improve my workflow is what initially got me into learning to code.
+        I was always frustrated of the many unnecessary steps we had to take that I started tracking and calculating the wasted total time and it came together to hours by the end of the week. Multiply that by each member a team might have and the calculated time grows drastically. <br>
+        The desire to be able to support my colleagues, friends and family and to not be dependent on others to improve my workflow is what initially got me into learning to code.
       </p>
       <table>
         <thead>
@@ -684,12 +684,12 @@
       <h2 id="surfing">What surfing means to me</h2>
       <p>
         As many probably can relate, it's not always easy to switch your mind from work to leisure mode. There was a time I couldn't help myself but check my work emails even during vacation. <br>
-        Once I booked a last minute trip to a surf camp and that was going to be the first time in a long time, where I could switch off and relax. The combination of physical exaustion of battling the waves as you paddle out and the concentration of selevting the right wave and be on the right spot allowed me to experience a combination of complete relaxation and concentration at the same time. It was such a magical moment that hooked me to the sport.
+        Once I booked a last minute trip to a surf camp and that was going to be the first time in a long time, where I could switch off and relax. The combination of physical exhaustion of battling the waves as you paddle out and the concentration of selecting the right wave and be on the right spot allowed me to experience a combination of complete relaxation and concentration at the same time. It was such a magical moment that hooked me to the sport.
       </p>
   
       <h2 id="climbing">How I got into climbing</h2>
       <p>
-        Climbing for me is a great way of training and socializing. With a group of friends we regularly meet up for a session and whenever possible, plan little escape trips during the weekends. It was through some of these friends, with who I used to work together with in a previous compnay, that invited me to join them after work. It's great to finish the day off and get some fun training in. Especially after you've been sitting at a desk for hours.
+        Climbing for me is a great way of training and socializing. With a group of friends we regularly meet up for a session and whenever possible, plan little escape trips on weekends. It was through some of these friends, with whom I used to work together with in a previous company, that invited me to join them after work. It's great to finish the day off and get some fun training in. Especially after you've been sitting at a desk for hours.
       </p>
     </div>
     <a href="#navigation" class="scroll-up">
